# bosgenesis-release-note-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  tasks.md
.agents/: SKILLS.md  config.toml
docker/: specs.md
docs/: report-style-spec.md  specs.md
docs/runbooks/: end-to-end-mvp-validation.md
examples/: specs.md
helm/: specs.md
helm/bosgenesis-release-note-agent/: Chart.yaml  values.yaml
helm/bosgenesis-release-note-agent/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  mcp-deployment.yaml  mcp-service.yaml  pvc.yaml  serviceaccount.yaml  worker-deployment.yaml
helm/github-release-note-agent/: specs.md
knowldege-base/: PLAN.md  SPEC.md  github_release_note_agent_hld.md  github_release_note_agent_lld.md
playbook/: container-smoke-test.sh  deploy.sh  test-mcp.sh  undeploy.sh
src/grna/: __init__.py  config.py  logging_config.py  specs.md
src/grna/analyzers/: __init__.py  code_structure.py  commits.py  documentation.py  interfaces.py  inventory.py  readiness.py  specs.md  technology.py  test_coverage.py
src/grna/api/: __init__.py  app.py  specs.md
src/grna/cli/: __init__.py  main.py  specs.md
src/grna/diagrams/: __init__.py  mermaid.py  specs.md
src/grna/evidence/: __init__.py  aggregator.py  indexer.py  models.py  specs.md
src/grna/github/: __init__.py  fetcher.py  specs.md  validator.py
src/grna/jobs/: __init__.py  orchestrator.py  specs.md  states.py
tests/: specs.md
tests/unit/: test_analytics_aggregator.py  test_api_app.py  test_cli.py  test_code_structure_analyzer.py  test_commit_analyzer.py  test_docker_runtime.py  test_documentation_analyzer.py  test_evidence_indexer.py  test_foundation.py  test_github_validator.py  test_html_report.py  test_interface_analyzer.py  test_inventory_analyzer.py  test_jobs.py  test_markdown_report.py  test_mcp_tools.py  test_mermaid_diagrams.py  test_observability.py  test_pdf_report.py  test_readiness_analyzer.py  test_repository_fetcher.py  test_storage.py  test_technology_analyzer.py  test_test_coverage_analyzer.py
(+31 files in other folders)
